--- a/install-linux.adoc
+++ b/install-linux.adoc
@@ -22,6 +22,60 @@
 ** ステップ３：インスタンスの詳細の設定画面で、
 - 「ネットワーク」で、WordPressVPCを選択
 - 「サブネット」で、パブリックサブネット１を選択して、右下の「次の手順：ストレージの追加」を選択
+** ステップ４：ストレージの追加で、無料利用枠の利用対象にするには、３０GB以内に設定すればいいので、「サイズ」を３０GBに設定し、「ボリュームタイプ」を汎用SSDにする。ここで「合わせて削除」にチェックをいれておくことによりインスタンス削除と同時にストレージが削除されるので安心、右下の「次の手順：タグの追加」をクリック
+** ステップ５：タグの追加で、ここではインスタンスを識別するためにタグ付けをすることができる。画面左下の「タグの追加」ボタンをクリック、キーにNAME、値に名前をつけるとインスタンスを開いた際にここで付けた名前が表示される。「値」にWordPress１と設定しておく。右下の「次の手順：セキュリティグループの設定をクリック
+** ステップ６：セキュリティグループの設定で、
+- 「セキュリティグループの割り当て」は、新しいセキュリティグループを作成するを選択
+- 「セキュリティグループ名」は：wordpress-sg
+- 「説明」：WordPress security group
+- sshの設定はデフォルトのまま
+- ルールの追加ボタンを押す
+- タイプから、HTTPを選択し、画面の右下の「確認を作成」ボタンをクリック
+** ステップ７：インスタンス作成の確認画面で、問題がなければ、右下の「作成」ボタンをクリック
+** 既存のキーペアを選択するか、新しいキーペアを作成する画面がでる。
+- 新しくキーペアの作成を選択
+- キーペアは好きな名前を入れる。park
+- 「キーペアのダウンロード」をクリック
+- park.pemのファイルがダウンロードされる。このファイルはインスタンスに接続するとき必要にな
+- 右下の「インスタンスの作成」をクリックするとインスタンスが作成される
+
+=== インスタンスにElastic IPを割り当てる＜固定のパブリックIPアドレスを割り当てる
+
+** 参考
+- Elastic IPは一つ目は無料で利用できる
+- 二つ目以降のElastic IPの場合は、＄0.005/hour($3.6/month)
+** EC2画面の左下にある「Elastic IP」を選択
+** 「新しいアドレスの割り当て」をクリック
+** 右下の「割り当て」をクリックするとElastic IPが割り当てれれる。「閉じる」をクリック
+** 予約したElastic IPはこのままではどこにも割り当てられてない状態なので、Elastic IPを選択した状態で、上の「アクション」をクリックして、「アドレスの関連付け」を選択
+- 「インスタンス」で、WordPress１を選択して、右下の「関連付け」をクリックし、次の画面で「閉じる」をクリック
+
+=== インスタンスにSSHクライアントで接続
+
+** インスタンスのパブリックIPの確認
+- EC2画面でインスタンスを選択し、インスタンスの画面を開く。
+- インスタンスのパブリックIPは、「IPv4パブリックIP：」の覧を確認する
+** インスタンスへの接続するコマンドを確認する
+- インスタンス画面の上で、「接続」をクリックすると、インスタンスへ接続画面が上がる。下方の例：で、ssh -i で始まる行の全体を選択し、コピーしておく。
+** Windows画面で、左下にある、〇ここに入力して検索に、PowerShellを検索する。
+** PowerShellを起動
+- .pemのファイルを保存している場所に移動
+- ダウンロードフォルダに.pemのファイルがある場合は
+- cd Downloads
+- ls コマンドで、.pemファイルがあることを確認
+- ここでペストを実行する
+** 最初のみ、確認メッセージが出る。yes
+** インスタンスから抜けるには、exit
+
+
+
+
+
+
+
+
+
+
 
 
 
